# bankruptcy_parser

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py
app/db/: models.py  repository.py  session.py
app/parser/: fedresurs_client.py  kad_client.py  kad_wasm.py  worker.py
app/utils/: logger.py  proxy.py  xlsx_reader.py
data/: inn_list.xlsx
